# VestiaireCollective_Demand_Forecasting_ML-Flow

./: EDA.ipynb  Market segementation & Buyer preference .ipynb  Presentaion  README.md  Readme_1.md
project_ml_flow copy/: Data_loader.py  Dockerfile  Dockerfile_predicting  Dockerfile_training  LICENSE  Makefile  README.md  best_run_id.txt  ci_pipeline.yml  pyproject.toml
project_ml_flow copy/auto-ml/: AutoML_SoldItems.ipynb  AutoML_SoldItems_FINAL.ipynb
project_ml_flow copy/batch_processing/: Batch_Processing_Azure.ipynb  Batch_processing2.ipynb
project_ml_flow copy/data/: extra
project_ml_flow copy/docs/: mkdocs.yml
project_ml_flow copy/docs/docs/: index.md
project_ml_flow copy/mlruns/0/: meta.yaml
project_ml_flow copy/mlruns/198180374087774633/: meta.yaml
project_ml_flow copy/mlruns/283023228198512109/: meta.yaml
project_ml_flow copy/mlruns/333747467912798533/: meta.yaml
project_ml_flow copy/mlruns/732189633993811001/: meta.yaml
project_ml_flow copy/module/: Dockerfile  data_loader.py  extract_packages.py
project_ml_flow copy/notebooks/: EDA.ipynb  Market Segmentation 1.ipynb  Market segementation & Buyer preference .ipynb  Price_Elasticity.ipynb  Price_Elasticity_MLFlow.ipynb  Seller Analysis.ipynb  Seller_Analysis_V2.ipynb  sold_train.ipynb
project_ml_flow copy/src/: Auto_Seletion.py  Price_Elasticity_2ndPart.py  app.py  auto_seletion.py  train.py
project_ml_flow copy/tests/: 1_Unit_Tests.ipynb  1_Unit_Tests.py  2_Data_Tests.ipynb  2_Data_Tests.py  3_Model_Validation_Tests.ipynb  3_Model_Validation_Tests.py  4_Model_Performance_Tests.ipynb  4_Model_Performance_Tests.py  5_Integration_Tests.ipynb  5_Integration_Tests.py  6_Data_Skew_Tests.ipynb  6_Data_Skew_Tests.py  7_Load_Tests.ipynb  7_Load_Tests.py  test_PriceElasticityPart1.py  test_PriceElasticityPart3.py
(+620 files in other folders)
