[project]
name = "ml_workflow"
version = "0.0.1"
description = "project_dependency"
authors = [
    {name = "chloe",email = "xy.he201833@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry]
package-mode = false


[tool.poetry.dependencies]
# original file
python = ">=3.11,<3.12"
pandas = "^2.2.1"
numpy = "<2.0"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
statsmodels = "^0.14.4"
pyarrow = ">=9.0.1,<20.0.0"
lightgbm = ">=4.6.0,<5.0.0"
doubleml = ">=0.9.3,<0.10.0"
catboost = "^1.2.7"
xgboost = "^3.0.0"
scikit-uplift = "^0.5.1"
ipykernel = "^6.29.5"
imbalanced-learn = "^0.13.0"
mlflow = "^2.22.0"

#price elasticity testing updated
pytest = "^8.1.1"
scikit-learn = "^1.4.2"

# seller_analysis_v2 updated
nltk = "^3.8.1"
kagglehub = "^0.3.12"
transformers = "^4.51.3"

#Ml FLow tracking updated
causalml = "^0.15.3"
gdown = "^5.2.0"
uvicorn = "^0.34.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
nbconvert = "^7.16.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"